--- a/css/aor.css
+++ b/css/aor.css
@@ -1,7 +1,8 @@
 /* Hide the Membership selections and force using a price set (so we get the VAT amounts correct) */
 tr.crm-membership-form-block-membership_type_id > td > span#mem_type_id,
 tr.crm-membership-form-block-membership_type_id > td > span#totalAmountORPriceSet,
-tr.crm-membership-form-block-membership_type_id > td > span.description
+tr.crm-membership-form-block-membership_type_id > td > span.description,
+div.custom-group-Membership
 {
   display: none;
 }
